@@ -4,17 +4,7 @@ Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
 - autoscroll down is slower than up if !lastLinePartial
-- save messes up; soft wrap switching bug is back
-- out of sync scroll
-- expandFolds is broken
-- "need repaint" line info flags & chunk cache handling invalidation
-  - if caret is at the end of a buffer when doing a replace all, a lot of
-    repaint() and getLineOfOffset() calls are made, however this doesn't
-    seem to affect performance that much.
-  - make replace-all fast/faster than 4.1
-- tags: hyperlinks in text area, narrow & follow link
-  same logic as error list
-- save: new buffer props don't take effect (mode, maybe others)
+- soft wrap switching bug is back
 - propertiesChanged() closes dockables
 - wrap of
 			if(extraEndVirt < 0)
@@ -34,6 +24,7 @@ and quirks that I need to fix eventually.
   - only one per buffer -- should buffer keep track of display mgrs,
     ask one of them for screen line counts?
   - display manager should not be O(n^2) with text areas
+  - this will fix the getLastPhysicalLine()/scrollTo() bug
 - inserting lines repaints twice
 - vfs browser: re-add option to base filter on filename extension
 - today:
@@ -238,7 +229,6 @@ org.gjt.sp.jedit.gui.PanelWindowContainer.show(PanelWindowContainer.java:200)
   too much of a hack?
 - replace all in a directory could be faster
 - buffer.setMode() slow
-- inserting/removing lines -- move gap less agressively
 - positions should be gapped too
 - eliminate redundant scans and events when loading buffer
 - make vfs listing faster
@@ -249,6 +239,9 @@ org.gjt.sp.jedit.gui.PanelWindowContainer.show(PanelWindowContainer.java:200)
 - delete line magic caret w/ block caret
 - replace with lookahead/lookbehind doesn't work
 - is getScreenLineOfOffset() called often?
-
+- if caret is at the end of a buffer when doing a replace all, a lot of
+  repaint() and getLineOfOffset() calls are made, however this doesn't
+  seem to affect performance that much.
+ 
 jEdit buffer local properties:
 :wrap=hard:maxLineLen=72:indentSize=2:
